--- a/vapp/package.json
+++ b/vapp/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "@drizzle/vue-plugin": "^0.1.3",
-    "drizzle": "^1.4.0",
+    "drizzle": "^1.2.1",
     "prettier": "^1.18.2",
     "vue": "^2.6.10",
     "vue-toasted": "^1.1.27",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "web3": "^1.0.0-beta.35"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
+    "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
